--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h1,h2,h3,h4,h5,p{
   margin-right: 9%;
   margin-top: 1%;
 }
+
+.op-menu{
+  display: none;
+}
 nav{
   /*border: 2px red solid;*/
    margin-top: 1%;
